--- a/Client/D3D12Project01-블러링/D3D12Project01.vcxproj
+++ b/Client/D3D12Project01-블러링/D3D12Project01.vcxproj
@@ -145,6 +145,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="CPacket.h" />
     <ClInclude Include="D3D12Project01.h" />
     <ClInclude Include="d3dx12.h" />
     <ClInclude Include="DDSTextureLoader12.h" />
@@ -163,6 +164,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="CPacket.cpp" />
     <ClCompile Include="D3D12Project01.cpp" />
     <ClCompile Include="DDSTextureLoader12.cpp" />
     <ClCompile Include="GameFramework.cpp" />
