--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -153,7 +153,7 @@
     <ClCompile Include="Bot.cpp" />
     <ClCompile Include="CPacket.cpp" />
     <ClCompile Include="DB.cpp" />
-    <ClCompile Include="ServerFunc.cpp" />
+    <ClCompile Include="Server.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Map.cpp" />
   </ItemGroup>
@@ -161,7 +161,7 @@
     <ClInclude Include="Bot.h" />
     <ClInclude Include="CPacket.h" />
     <ClInclude Include="DB.h" />
-    <ClInclude Include="ServerFunc.h" />
+    <ClInclude Include="Server.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Map.h" />
   </ItemGroup>
