--- a/Client/D3D12Project01-블러링/D3D12Project01.vcxproj
+++ b/Client/D3D12Project01-블러링/D3D12Project01.vcxproj
@@ -204,6 +204,9 @@
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.1</ShaderModel>
     </FxCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
