--- a/Server/GameServer/Server.vcxproj
+++ b/Server/GameServer/Server.vcxproj
@@ -24,7 +24,7 @@
     <ProjectGuid>{8884396f-33d7-427e-8238-08538a82afec}</ProjectGuid>
     <RootNamespace>CAServer</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>Server</ProjectName>
+    <ProjectName>GameServer</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
