--- a/Client/D3D12Project01-블러링/D3D12Project01.vcxproj
+++ b/Client/D3D12Project01-블러링/D3D12Project01.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="protocol.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Shader.h" />
