--- a/Server/GameServer/Server.vcxproj
+++ b/Server/GameServer/Server.vcxproj
@@ -158,7 +158,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bot.h" />
-    <ClInclude Include="CPacket.h" />
+    <ClInclude Include="protocol.h" />
     <ClInclude Include="DB.h" />
     <ClInclude Include="Server.h" />
     <ClInclude Include="stdafx.h" />
