--- a/Server/LobbyServer/Server.vcxproj
+++ b/Server/LobbyServer/Server.vcxproj
@@ -155,7 +155,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CPacket.h" />
+    <ClInclude Include="protocol.h" />
     <ClInclude Include="DB.h" />
     <ClInclude Include="Server.h" />
     <ClInclude Include="stdafx.h" />
