서버 한거 합침
ㅇㅇ

--- a/Client/SkyFall/SkyFall.vcxproj
+++ b/Client/SkyFall/SkyFall.vcxproj
@@ -146,8 +146,9 @@
     <ClInclude Include="GameFramework.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Object.h" />
-    <ClInclude Include="Packet.h" />
+    <ClInclude Include="CPacket.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="protocol.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Shader.h" />
@@ -163,7 +164,7 @@
     <ClCompile Include="GameFramework.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Object.cpp" />
-    <ClCompile Include="Packet.cpp" />
+    <ClCompile Include="CPacket.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Shader.cpp" />
