--- a/Client/SkyFall/SkyFall.vcxproj.filters
+++ b/Client/SkyFall/SkyFall.vcxproj.filters
@@ -125,7 +125,7 @@
     </Image>
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="Source\Light.hlsl" />
-    <FxCompile Include="Source\Shaders.hlsl" />
+    <FxCompile Include="Shaders.hlsl" />
+    <FxCompile Include="Light.hlsl" />
   </ItemGroup>
 </Project>
