진짜욕나옴

--- a/Server/Dummy/Dummy.vcxproj.filters
+++ b/Server/Dummy/Dummy.vcxproj.filters
@@ -32,7 +32,7 @@
     <ClInclude Include="CPacket.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="protocol.h">
+    <ClInclude Include="..\GameServer\protocol.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
