--- a/Server/Dummy/Dummy.vcxproj
+++ b/Server/Dummy/Dummy.vcxproj
@@ -147,9 +147,9 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\GameServer\protocol.h" />
     <ClInclude Include="CPacket.h" />
     <ClInclude Include="Player.h" />
-    <ClInclude Include="protocol.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
