로그인 -> 로비화면 -> 대기방 까지 구현

--- a/Client/SkyFall/imgui.ini
+++ b/Client/SkyFall/imgui.ini
@@ -9,7 +9,12 @@ Size=337,141
 Collapsed=1
 
 [Window][Login]
-Pos=296,52
-Size=340,81
+Pos=120,190
+Size=400,100
+Collapsed=0
+
+[Window][Lobby]
+Pos=320,10
+Size=310,460
 Collapsed=0
 
