--- a/Client/SkyFall/imgui.ini
+++ b/Client/SkyFall/imgui.ini
@@ -15,6 +15,11 @@ Collapsed=0
 
 [Window][Lobby]
 Pos=320,10
-Size=310,460
+Size=310,380
+Collapsed=0
+
+[Window][Room]
+Pos=60,60
+Size=217,54
 Collapsed=0
 
