--- a/Client/SkyFall/imgui.ini
+++ b/Client/SkyFall/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=120,190
+Size=130,32
 Collapsed=0
 
 [Window][Test]
@@ -21,5 +21,10 @@ Collapsed=0
 [Window][Room]
 Pos=60,60
 Size=217,54
+Collapsed=0
+
+[Window][Error]
+Pos=275,190
+Size=104,50
 Collapsed=0
 
