--- a/Client/SkyFall/SkyFall.vcxproj.filters
+++ b/Client/SkyFall/SkyFall.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="Monster.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Sound.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SkyFall.cpp">
@@ -130,6 +133,9 @@
     </ClCompile>
     <ClCompile Include="includes\imgui\imgui_widgets.cpp">
       <Filter>리소스 파일\소스 파일\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="Sound.cpp">
+      <Filter>리소스 파일\소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
